workshops/okta-token-exchange/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: okta-tx
  labels:
    workshop: okta-token-exchange
